--- a/NotiShare-Mobile/NotiShare/Resources/layout/register_layout.axml
+++ b/NotiShare-Mobile/NotiShare/Resources/layout/register_layout.axml
@@ -23,7 +23,7 @@
       android:minHeight="100px"
       android:layout_centerInParent="true">
       <android.support.design.widget.TextInputLayout
-        android:id="@+id/userNameField"
+        android:id="@+id/emailInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dip"
@@ -32,7 +32,7 @@
           android:layout_width="match_parent"
           android:hint="@string/Email"
           android:layout_height="wrap_content"
-          android:id="@+id/userNameEditText"
+          android:id="@+id/emailTextEdit"
           android:singleLine="true" />
       </android.support.design.widget.TextInputLayout>
       <android.support.design.widget.TextInputLayout
@@ -72,7 +72,8 @@
         android:id="@+id/registerButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/Register">
+        android:text="@string/Register"
+        android:onClick="onRegister">
       </Button>
     </LinearLayout>
   </RelativeLayout>
