implement register device request

--- a/NotiShare-Mobile/NotiShare/Resources/layout/login_screen.axml
+++ b/NotiShare-Mobile/NotiShare/Resources/layout/login_screen.axml
@@ -9,13 +9,13 @@
   <include
     android:id="@+id/progressBar"
     layout="@layout/Progressbar"
-    android:visibility="gone" />
+    android:visibility="visible" />
   <RelativeLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/homeLayout"
-    android:visibility="visible">
+    android:visibility="gone">
     <LinearLayout
       android:orientation="vertical"
       android:layout_width="match_parent"
