--- a/NotiShare-Mobile/NotiShare/Resources/layout/preference_layout.axml
+++ b/NotiShare-Mobile/NotiShare/Resources/layout/preference_layout.axml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen
-  xmlns:android="http://schemas.android.com/apk/res/android">
-  <CheckBoxPreference
-    android:key="notification"
-    android:summary="@string/EnableNotificationSummary"
-    android:title="@string/EnableNotificationTitle">
-  </CheckBoxPreference>
-  <CheckBoxPreference
-    android:key="clipboard"
-    android:summary="@string/EnableClipboardSummary"
-    android:title="@string/EnableClipboardTitle">
-  </CheckBoxPreference>
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <CheckBoxPreference
+        android:key="notification"
+        android:summary="@string/EnableNotificationSummary"
+        android:title="@string/EnableNotificationTitle" />
+    <CheckBoxPreference
+        android:key="clipboard"
+        android:summary="@string/EnableClipboardSummary"
+        android:title="@string/EnableClipboardTitle" />
 </PreferenceScreen>
