--- a/NotiShare-Mobile/NotiShare/Resources/layout/app_layout.axml
+++ b/NotiShare-Mobile/NotiShare/Resources/layout/app_layout.axml
@@ -3,30 +3,28 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-  <include
-    android:id="@+id/progressBar"
-    layout="@layout/Progressbar"
-    android:visibility="visible"/>
-  <LinearLayout
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_centerInParent="true"
-    android:layout_marginLeft="25dp"
-    android:layout_marginRight="25dp"
-    android:id="@+id/mainLayout"
-    android:visibility="gone">
-    <Button
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="@string/SettingsTitle"
-      android:onClick="onSettings">
-    </Button>
-    <Button
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="@string/Logout"
-      android:onClick="onLogout">
-    </Button>
-  </LinearLayout>
+    <include
+        android:id="@+id/progressBar"
+        layout="@layout/Progressbar"
+        android:visibility="visible" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:id="@+id/mainLayout"
+        android:visibility="gone">
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/SettingsTitle"
+            android:onClick="onSettings" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Logout"
+            android:onClick="onLogout" />
+    </LinearLayout>
 </RelativeLayout>
