--- a/NotiShare-Mobile/NotiShare/Resources/layout/login_screen.axml
+++ b/NotiShare-Mobile/NotiShare/Resources/layout/login_screen.axml
@@ -1,77 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:minWidth="25px"
-                android:minHeight="25px">
-  <include
-    android:id="@+id/progressBar"
-    layout="@layout/Progressbar"
-    android:visibility="visible" />
-  <RelativeLayout
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/homeLayout"
-    android:visibility="gone">
-    <LinearLayout
-      android:orientation="vertical"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:minHeight="100px"
-      android:layout_centerInParent="true">
-      <android.support.design.widget.TextInputLayout
-        android:id="@+id/emailField"
+    android:minWidth="25px"
+    android:minHeight="25px">
+    <include
+        android:id="@+id/progressBar"
+        layout="@layout/Progressbar"
+        android:visibility="visible" />
+    <RelativeLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dip"
-        android:layout_marginRight="25dip">
-        <android.support.design.widget.TextInputEditText
-          android:layout_width="match_parent"
-          android:hint="@string/Email"
-          android:layout_height="wrap_content"
-          android:id="@+id/emailEditText"
-          android:singleLine="true" />
-      </android.support.design.widget.TextInputLayout>
-      <android.support.design.widget.TextInputLayout
-        android:id="@+id/passwordField"
-        android:layout_marginTop="50dip"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dip"
-        android:layout_marginRight="25dip">
-        <android.support.design.widget.TextInputEditText
-          android:layout_width="match_parent"
-          android:hint="@string/Password"
-          android:layout_height="wrap_content"
-          android:password="true"
-          android:id="@+id/passwordEditText"
-          android:singleLine="true" />
-      </android.support.design.widget.TextInputLayout>
-      <LinearLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_marginTop="50dip"
-        android:layout_marginLeft="25dip"
-        android:layout_marginRight="25dip">
-        <Button
-          android:id="@+id/loginButton"
-          android:layout_weight="1"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:text="@string/Login"
-          android:onClick="onLogin"/>
-        <Button
-          android:id="@+id/registerButton"
-          android:layout_width="wrap_content"
-          android:layout_weight="1"
-          android:layout_height="wrap_content"
-          android:text="@string/Register"
-          android:onClick="onRegister"></Button>
-      </LinearLayout>
-    </LinearLayout>
-  </RelativeLayout>
+        android:layout_height="match_parent"
+        android:id="@+id/homeLayout"
+        android:visibility="gone">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true">
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/loginField"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/left_right_margin"
+                android:layout_marginRight="@dimen/left_right_margin">
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:hint="@string/Email"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/loginEditText"
+                    android:maxLines="1" />
+            </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/passwordField"
+                android:layout_marginTop="@dimen/top_margin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/left_right_margin"
+                android:layout_marginRight="@dimen/left_right_margin">
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:hint="@string/Password"
+                    android:layout_height="wrap_content"
+                    android:password="true"
+                    android:id="@+id/passwordEditText"
+                    android:maxLines="1" />
+            </android.support.design.widget.TextInputLayout>
+            <LinearLayout
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/top_margin"
+                android:layout_marginLeft="@dimen/left_right_margin"
+                android:layout_marginRight="@dimen/left_right_margin">
+                <Button
+                    android:id="@+id/loginButton"
+                    android:layout_weight=".5"
+                    android:layout_width="@dimen/zero_dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Login"
+                    android:onClick="onLogin" />
+                <Button
+                    android:id="@+id/registerButton"
+                    android:layout_width="@dimen/zero_dp"
+                    android:layout_weight=".5"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Register"
+                    android:onClick="onRegister" />
+            </LinearLayout>
+        </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
