--- a/NotiShare-Mobile/NotiShare/Resources/layout/settings_layout.axml
+++ b/NotiShare-Mobile/NotiShare/Resources/layout/settings_layout.axml
@@ -3,10 +3,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-  <FrameLayout
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/settings_fragment">
-  </FrameLayout>
+    <FrameLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/settings_fragment" />
 </LinearLayout>
