--- a/NotiShare-Mobile/NotiShare/Resources/layout/register_layout.axml
+++ b/NotiShare-Mobile/NotiShare/Resources/layout/register_layout.axml
@@ -78,7 +78,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/emailTextEdit"
                         android:maxLines="1" 
-                        android:inputType="text"/>
+                        android:inputType="textEmailAddress"/>
                 </android.support.design.widget.TextInputLayout>
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/passwordField"
